Fix sidebar on mobile

--- a/client/src/components/layout/layout.css
+++ b/client/src/components/layout/layout.css
@@ -15,3 +15,10 @@
   text-decoration: none !important;
   color: inherit;
 }
+
+@media screen and (min-width: 480px) {
+  .listBorder {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+  }
+}
